--- a/react/src/index.css
+++ b/react/src/index.css
@@ -10,6 +10,7 @@ body {
 :root{
   --red: #f44336;
   --dark-blue: #18244c;
+  --white: #fff;
 }
 
 .red-btn {
@@ -23,5 +24,17 @@ body {
 .red-btn:hover {
   background-color: #f44336;
   color: #fff;
-  
+}
+
+.red-fill-button{
+  background-color: #f44336;
+  color: #fff;
+  border: 1px solid #f44336;
+  margin-top: 15px;
+  padding: 12px 34px;
+}
+
+.red-fill-button:hover{
+  background-color: transparent;
+  color: #f44336;
 }
