--- a/src/components/aboutUs/styles.css
+++ b/src/components/aboutUs/styles.css
@@ -1,5 +1,5 @@
 #about {
-    width: 80%;
+    width: 60%;
     height: 600px;
     margin: auto;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
@@ -13,16 +13,15 @@
     justify-content: space-between;
     width: 100%;
 }
-/*
 
-.left-container{
+.about-left-container{
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.right-container{
+.about-right-container{
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -33,7 +32,7 @@
     font-weight: 300;
 }
 
-.right-container h1{
+.about-right-container h1{
     font-size: 35px;
     font-weight: 600;
-} */
+}
