--- a/src/components/vission/style.css
+++ b/src/components/vission/style.css
@@ -1,8 +1,9 @@
-.mission-container{
+.vision-container{
     display: flex;
     align-items: center;
     justify-content: space-between;
     margin-top: 30px;
+    gap: 40px;
     width: 80%;
     margin: auto;
 }
