--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,12 @@
   padding: 0;
 }
 
+.chatbot-logo{
+  width: 50px;
+  height: 50px;
+  background-color: red;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+}
