--- a/src/components/career_card/style.css
+++ b/src/components/career_card/style.css
@@ -1,5 +1,27 @@
 .career-card{
-    width: 400px;
-    height: 300px;
-    background-color: red;
+    width: 300px;
+    height: 500px;
+    background-color: var(--white);
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.career-card img{
+
+}
+
+.career-card h2{
+    margin-top: 20px;
+}
+
+
+.career-card p {
+    margin-top: 20px;
+    font-weight: 400;
+    font-size: 1.25rem;
+    text-align: center;
 }
