--- a/src/Pages/contact/style.css
+++ b/src/Pages/contact/style.css
@@ -1,5 +1,8 @@
 .contact {
-    padding: 130px 0;
+    padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .contact .heading h2 {
@@ -7,7 +10,7 @@
     font-weight: 700;
     margin: 0;
     padding: 0;
-
+    text-align: center;
 }
 
 .contact .heading h2 span {
@@ -74,4 +77,20 @@
     font-size: 13px;
     font-weight: 300;
     color: #999999;
+}
+
+.contact-container{
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.contact-container .left{
+    width: 30%;
+}
+
+.contact-container .right{
+    margin-left: 24px;
+    width: 50%;
 }
