--- a/src/components/aboutUs/styles.css
+++ b/src/components/aboutUs/styles.css
@@ -15,14 +15,19 @@
 }
 
 .about-left-container{
-    width: 100%;
+    width: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+.about-left-container img{
+    width: 80%;
+    height: 100%;
+}
+
 .about-right-container{
-    width: 100%;
+    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: start;
